kubernetes/deprecated-api-tests/01-ingress-extensions-v1beta1.yaml
# DEPRECATED: extensions/v1beta1 Ingress was removed in Kubernetes 1.22
# Replacement: networking.k8s.io/v1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deprecated-ingress-extensions
  namespace: at-app1
  labels:
    app.kubernetes.io/part-of: aks-backup-poc
    purpose: deprecated-api-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: app1.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
